--- a/src/main/resources/templates/contest/contestAward.html
+++ b/src/main/resources/templates/contest/contestAward.html
@@ -47,7 +47,7 @@
         <!-- 버튼 섹션 -->
         <div class="button-section">
             <button type="button" class="btn btn-primary" onclick="submitAward()">😆 제출하기</button>
-            <button type="button" class="btn btn-danger" onclick="location.href='/contest/no-winner'">
+            <button type="button" class="btn btn-danger" onclick="location.href='/users/contest/no-winner'">
                 😭 마음에 드는 작품이 없어요
             </button>
         </div>
