마감임박 콘테스트의 경우, 배경색을 변경
마감임박 콘테스트의 경우, 배경색을 변경

--- a/src/main/resources/static/css/list/main.css
+++ b/src/main/resources/static/css/list/main.css
@@ -145,6 +145,11 @@ a {
     margin-bottom: 8px;
 }
 
+.endDate.active
+{
+    background: var(--main-color);
+}
+
 .conTitle {
     font-size: var(--font-size-16);
     font-weight: 700;
