--- a/src/main/resources/templates/notifications/eventWrite.html
+++ b/src/main/resources/templates/notifications/eventWrite.html
@@ -81,7 +81,8 @@
 
                 <!-- 등록/수정 버튼 -->
                 <button type="submit" class="btn btn-primary"
-                        th:text="${eventDTO.eventNum != null and !eventDTO.eventTempSave ? '수정' : '등록'}"></button>
+                        th:text="${eventDTO.eventNum != null and !eventDTO.eventTempSave ? '수정' : '등록'}"
+                        id="submitRegisterBtn"></button>
 
                 <!-- 임시 저장 버튼 -->
                 <button type="button" class="btn btn-secondary" id="tempSaveBtn"
