--- a/src/main/resources/templates/user/MyPageProfile.html
+++ b/src/main/resources/templates/user/MyPageProfile.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-<form method="post" action="/profile/write">
+<form method="post" action="/users/mypage/profile/write">
     <div class="container">
         <div class="profile">
             <div>
