--- a/src/main/resources/templates/user/MyPageUpload.html
+++ b/src/main/resources/templates/user/MyPageUpload.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <th:block layout:fragment="content">
-    <form method="post" action="/mypage/upload" enctype="multipart/form-data">
+    <form method="post" action="/users/mypage/upload" enctype="multipart/form-data">
     <main>
         <div class="mainWarap">
             <div class="contestWarap">
@@ -59,7 +59,7 @@
                     <label for="close" class="close">비공개</label>
                 </div>
                 <div class="back">
-                    <a href="/mypage" class="mypageback">마이페이지 돌아가기</a>
+                    <a href="/users/mypage" class="mypageback">마이페이지 돌아가기</a>
                 </div>
                 </div><!--applyWarap-->
             </section>
